--- a/Source/Modules/PierogiesBot.Modules.Discord/PierogiesBot.Modules.Discord.csproj
+++ b/Source/Modules/PierogiesBot.Modules.Discord/PierogiesBot.Modules.Discord.csproj
@@ -6,8 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Discord.Net.Core" Version="2.2.0" />
-      <PackageReference Include="Discord.Net.WebSocket" Version="2.2.0" />
+      <PackageReference Include="Discord.Net" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.9" />
     </ItemGroup>
 
