--- a/Source/Modules/Module.Persistence/Module.Persistence.csproj
+++ b/Source/Modules/Module.Persistence/Module.Persistence.csproj
@@ -17,4 +17,8 @@
       <PackageReference Include="MongoDB.Driver" Version="2.11.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models" />
+    </ItemGroup>
+
 </Project>
