--- a/Source/Modules/Module.Core/Module.Core.csproj
+++ b/Source/Modules/Module.Core/Module.Core.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
         <AssemblyName>Module.Core</AssemblyName>
         <RootNamespace>Module.Core</RootNamespace>
+        <TargetFrameworks>netstandard2.1;netcoreapp3.1</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
