Fix bot time culture

--- a/Source/Runners/Runner.Console/appsettings.Development.json
+++ b/Source/Runners/Runner.Console/appsettings.Development.json
@@ -7,6 +7,8 @@
         }
     },
     "MongoDb": {
-        "DatabaseName": "PierogiesBot"
-    }
+        "DatabaseName": "PierogiesBot",
+        "ConnectionString": "mongodb://localhost:27017/PierogiesBot?retryWrites=true&w=majority"
+    },
+    "DiscordBotToken": ""
 }
