--- a/Source/Runners/Runner.Console/Runner.Console.csproj
+++ b/Source/Runners/Runner.Console/Runner.Console.csproj
@@ -14,6 +14,9 @@
       <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="appsettings.Development.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
