--- a/Source/Runners/Runner.Console/Runner.Console.csproj
+++ b/Source/Runners/Runner.Console/Runner.Console.csproj
@@ -14,7 +14,7 @@
       <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="appsettings.Development.json">
+      <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
