Implement missing features

--- a/PierogiesBot/appsettings.Development.json
+++ b/PierogiesBot/appsettings.Development.json
@@ -2,17 +2,27 @@
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
-      "Microsoft": "Debug",
+      "HealthChecks.UI": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning",
+      "System.Net.Http.HttpClient.health-checks": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "DatabaseSettings": {
-    "ConnectionString": "mongodb://localhost"
   },
   "JwtSettings": {
     "Secret": "B39FB880-E7F4-4D48-8CDA-0EFC9F5F9A4B",
     "ValidAudience": "https://localhost:5001",
     "ValidIssuer": "https://localhost:5001"
+  },
+  "DiscordSettings": {
+    "Token": "REPLACE"
+  },
+  "CommandServiceConfig": {
+    "DefaultRunMode": "Sync",
+    "SeparatorChar": " ",
+    "CaseSensitiveCommands": false,
+    "LogLevel": "Debug",
+    "ThrowOnError": true
   },
   "MongoDBOption": {
     "ConnectionString": "mongodb://localhost:27017/PierogiesBot",
