--- a/PierogiesBot/appsettings.json
+++ b/PierogiesBot/appsettings.json
@@ -6,10 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "DatabaseSettings": {
-    "ConnectionString": ""
+  "DiscordSettings": {
+    "Token": "REPLACE"
   },
+  "CommandServiceConfig": {
+    "DefaultRunMode": "Sync",
+    "SeparatorChar": " ",
+    "CaseSensitiveCommands": false,
+    "LogLevel": "Info",
+    "ThrowOnError": true
+  },
+  "AllowedHosts": "*",
   "MongoDBOption": {
     "ConnectionString": "",
     "Database": "PierogiesBot",
