--- a/PierogiesBot/PierogiesBot.csproj
+++ b/PierogiesBot/PierogiesBot.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="5.0.1" />
+        <PackageReference Include="AspNetCore.HealthChecks.UI" Version="5.0.1" />
+        <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
+        <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="5.0.1" />
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
         <PackageReference Include="FB.AspNetCore.Identity.MongoDB" Version="2.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
@@ -16,6 +20,16 @@
         <PackageReference Include="MongoDB.Driver" Version="2.12.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Modules\PierogiesBot.Commons\PierogiesBot.Commons.csproj" />
+      <ProjectReference Include="..\Modules\PierogiesBot.Data\PierogiesBot.Data.csproj" />
+      <ProjectReference Include="..\Modules\PierogiesBot.Discord\PierogiesBot.Discord.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Services" />
     </ItemGroup>
 
 </Project>
