Prepare for deploy

--- a/PierogiesBot/appsettings.json
+++ b/PierogiesBot/appsettings.json
@@ -1,32 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
+      "Default": "Trace",
+      "HealthChecks.UI": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning",
+      "System.Net.Http.HttpClient.health-checks": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "DiscordSettings": {
-    "Token": "REPLACE"
-  },
-  "CommandServiceConfig": {
-    "DefaultRunMode": "Sync",
-    "SeparatorChar": " ",
-    "CaseSensitiveCommands": false,
-    "LogLevel": "Info",
-    "ThrowOnError": true
-  },
-  "AllowedHosts": "*",
-  "MongoDBOption": {
-    "ConnectionString": "",
-    "Database": "PierogiesBot",
-    "User": {
-      "CollectionName": "Users",
-      "ManageIndicies": true
-    },
-    "Role": {
-      "CollectionName": "Roles",
-      "ManageIndicies": true
     }
   }
 }
