--- a/PierogiesBot/Dockerfile
+++ b/PierogiesBot/Dockerfile
@@ -1,7 +1,7 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 5001
+EXPOSE 5000
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
@@ -17,4 +17,5 @@ RUN dotnet publish "PierogiesBot.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_URLS="http://*:5000"
 ENTRYPOINT ["dotnet", "PierogiesBot.dll"]
