--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,8 @@ jobs:
       # build and push Docker image
       - run: |
           TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build -t avabin/pierogiesbot:$TAG .
+          docker build -f PierogiesBot/Dockerfile -t avabin/pierogiesbot:latest .
+          docker tag avabin/pierogiesbot:latest avabin/pierogiesbot:$TAG
           echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
           docker push avabin/pierogiesbot:latest
           echo "Connecting to server..."
