--- a/Modules/PierogiesBot.Commons/PierogiesBot.Commons.csproj
+++ b/Modules/PierogiesBot.Commons/PierogiesBot.Commons.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="RestEase" Version="1.5.4" />
+      <PackageReference Include="RestEase.SourceGenerator" Version="1.5.4">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
