Add log in view

--- a/PierogiesBot.Manager/appsettings.json
+++ b/PierogiesBot.Manager/appsettings.json
@@ -6,5 +6,6 @@
             "Microsoft": "Information"
         }
     },
-    "APIBaseAddress" : "https://pierogiesbot.tk"
+//    "APIBaseAddress" : "https://pierogiesbot.tk"
+    "APIBaseAddress" : "https://localhost:5001"
 }
