--- a/PierogiesBot.Manager/PierogiesBot.Manager.csproj
+++ b/PierogiesBot.Manager/PierogiesBot.Manager.csproj
@@ -8,6 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.6" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
@@ -17,7 +22,8 @@
       <PackageReference Include="ReactiveUI.Fody" Version="13.3.2" />
       <PackageReference Include="ReactiveUI.WPF" Version="13.3.2" />
       <PackageReference Include="RestEase.HttpClientFactory" Version="1.5.4" />
-      <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="11.1.1" />
+      <PackageReference Include="Splat.Autofac" Version="11.1.1" />
+      <PackageReference Include="Splat.Microsoft.Extensions.Logging" Version="11.1.1" />
     </ItemGroup>
 
     <ItemGroup>
