Add rules views

--- a/Modules/PierogiesBot.Commons/PierogiesBot.Commons.csproj
+++ b/Modules/PierogiesBot.Commons/PierogiesBot.Commons.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <Configurations>Debug;Release;Manager Debug;Manager Release;Bot Debug;Bot Release</Configurations>
+        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
