--- a/Modules/PierogiesBot.Discord/PierogiesBot.Discord.csproj
+++ b/Modules/PierogiesBot.Discord/PierogiesBot.Discord.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <Configurations>Debug;Release;Manager Debug;Manager Release;Bot Debug;Bot Release</Configurations>
+        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
