--- a/PierogiesBot.Manager/PierogiesBot.Manager.csproj
+++ b/PierogiesBot.Manager/PierogiesBot.Manager.csproj
@@ -5,10 +5,21 @@
         <TargetFramework>net5.0-windows</TargetFramework>
         <UseWPF>true</UseWPF>
         <Nullable>enable</Nullable>
+        <Configurations>Debug;Release;Manager Debug;Manager Release;Bot Debug;Bot Release</Configurations>
+        <Platforms>AnyCPU</Platforms>
+        <Authors>Dungeon Lurkers</Authors>
+        <Company>Dungeon Lurkers</Company>
+        <AssemblyVersion>0.1</AssemblyVersion>
+        <FileVersion>0.1</FileVersion>
+        <PublishReadyToRun>true</PublishReadyToRun>
+        <PublishSingleFile>true</PublishSingleFile>
+        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     </PropertyGroup>
-
+    
     <ItemGroup>
       <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+      <PackageReference Include="AutoMapper" Version="10.1.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,6 +35,7 @@
       <PackageReference Include="RestEase.HttpClientFactory" Version="1.5.4" />
       <PackageReference Include="Splat.Autofac" Version="11.1.1" />
       <PackageReference Include="Splat.Microsoft.Extensions.Logging" Version="11.1.1" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.1" />
     </ItemGroup>
 
     <ItemGroup>
