--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -50,7 +50,7 @@ jobs:
 
     strategy:
       matrix:
-        configuration: [Debug, Release]
+        configuration: ["Manager Debug", "Manager Release"]
 
     runs-on: windows-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
@@ -71,10 +71,6 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-
-    # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.0.2
       
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
@@ -84,7 +80,7 @@ jobs:
 
     # Remove the pfx
     - name: Compress package
-      run: Compress-Archive -Path target/* -DestinationPath $($env:Wpf_Project_Directory)\manager.zip
+      run: Compress-Archive -Path target/* -DestinationPath "$($env:Wpf_Project_Directory)\manager.zip"
 
     # Upload the MSIX package: https://github.com/marketplace/actions/upload-artifact
     - name: Upload build artifacts
