--- a/Modules/PierogiesBot.Discord/PierogiesBot.Discord.csproj
+++ b/Modules/PierogiesBot.Discord/PierogiesBot.Discord.csproj
@@ -15,6 +15,7 @@
       <PackageReference Include="Quartz.AspNetCore" Version="3.3.2" />
       <PackageReference Include="Quartz.Plugins.TimeZoneConverter" Version="3.3.2" />
       <PackageReference Include="System.Reactive" Version="5.0.0" />
+      <PackageReference Include="TimeZoneConverter" Version="3.5.0" />
     </ItemGroup>
 
     <ItemGroup>
