--- a/PierogiesBot.Manager/NLog.config
+++ b/PierogiesBot.Manager/NLog.config
@@ -30,7 +30,7 @@
             archiveDateFormat="yyyy-MM-dd"
             archiveAboveSize="104857600"
             maxArchiveFiles="14"
-            layout="${longdate} ${uppercase:${level}} ${message}"/>
+            layout="${longdate} ${padding:padding=7,fixedlength=true:uppercase:${level}} ${logger} ${message} ${exception:format=ToString,StackTrace}${newline}" />
 
     <target xsi:type="ColoredConsole" name="c"
             layout="${longdate} ${uppercase:${level}} ${message}" />
