--- a/PierogiesBot/appsettings.Development.json
+++ b/PierogiesBot/appsettings.Development.json
@@ -2,6 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
+      "Orleans": "Information",
       "HealthChecks.UI": "Warning",
       "Microsoft.EntityFrameworkCore": "Warning",
       "System.Net.Http.HttpClient.health-checks": "Warning",
@@ -15,7 +16,7 @@
     "ValidIssuer": "https://localhost:5001"
   },
   "DiscordSettings": {
-    "Token": "REPLACE"
+    "Token": ""
   },
   "CommandServiceConfig": {
     "DefaultRunMode": "Sync",
@@ -23,6 +24,9 @@
     "CaseSensitiveCommands": false,
     "LogLevel": "Debug",
     "ThrowOnError": true
+  },
+  "OrleansMongoDBOptions": {
+    "DatabaseName": "PierogiesBot"
   },
   "MongoDBOption": {
     "ConnectionString": "mongodb://localhost:27017/PierogiesBot",
