--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,10 @@ orbs:
 
 jobs:
   build:
+    filters:
+        branches:
+          only:
+            - master
     docker:
       - image: cimg/base:2020.01
     steps:
