Implement HTTP api for rules using Orleans.HTTP

--- a/PierogiesBot/PierogiesBot.csproj
+++ b/PierogiesBot/PierogiesBot.csproj
@@ -17,6 +17,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
         <PackageReference Include="FB.AspNetCore.Identity.MongoDB" Version="2.0.0" />
