--- a/Modules/Orleans/PierogiesBot.Grains/PierogiesBot.Grains.csproj
+++ b/Modules/Orleans/PierogiesBot.Grains/PierogiesBot.Grains.csproj
@@ -2,9 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="10.1.1" />
       <PackageReference Include="Discord.Net.Commands" Version="2.4.0" />
       <PackageReference Include="Discord.Net.WebSocket" Version="2.4.0" />
       <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="3.4.3">
