--- a/Modules/Orleans/PierogiesBot.GrainsInterfaces/PierogiesBot.GrainsInterfaces.csproj
+++ b/Modules/Orleans/PierogiesBot.GrainsInterfaces/PierogiesBot.GrainsInterfaces.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -10,6 +11,12 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="3.4.3" />
+      <PackageReference Include="Orleans.Http.Abstractions" Version="1.3.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\PierogiesBot.Commons\PierogiesBot.Commons.csproj" />
+      <ProjectReference Include="..\..\PierogiesBot.Data\PierogiesBot.Data.csproj" />
     </ItemGroup>
 
 </Project>
