--- a/Modules/Orleans/PierogiesBot.Silo/PierogiesBot.Silo.csproj
+++ b/Modules/Orleans/PierogiesBot.Silo/PierogiesBot.Silo.csproj
@@ -12,6 +12,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Orleans.Server" Version="3.4.3" />
+      <PackageReference Include="Orleans.Http" Version="1.3.1" />
       <PackageReference Include="Orleans.Providers.MongoDB" Version="3.3.0" />
       <PackageReference Include="OrleansDashboard" Version="3.1.0" />
     </ItemGroup>
