--- a/PierogiesBot.Manager/appsettings.json
+++ b/PierogiesBot.Manager/appsettings.json
@@ -6,6 +6,6 @@
             "Microsoft": "Trace"
         }
     },
-    "APIBaseAddress" : "https://pierogiesbot.tk"
-//    "APIBaseAddress" : "https://localhost:5001"
+//    "APIBaseAddress" : "https://pierogiesbot.tk"
+    "APIBaseAddress" : "https://localhost:5001"
 }
