--- a/PierogiesBot/PierogiesBot.csproj
+++ b/PierogiesBot/PierogiesBot.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="AspNetCore.HealthChecks.UI" Version="5.0.1" />
         <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
         <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="5.0.1" />
+        <PackageReference Include="AspNetCore.Proxy" Version="4.2.0" />
         <PackageReference Include="AsyncFixer" Version="1.5.1">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
