--- a/Modules/Orleans/PierogiesBot.GrainsInterfaces/PierogiesBot.GrainsInterfaces.csproj
+++ b/Modules/Orleans/PierogiesBot.GrainsInterfaces/PierogiesBot.GrainsInterfaces.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Discord.Net.WebSocket" Version="2.4.0" />
       <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="3.4.3">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
