--- a/Modules/PierogiesBot.Data/PierogiesBot.Data.csproj
+++ b/Modules/PierogiesBot.Data/PierogiesBot.Data.csproj
@@ -13,6 +13,9 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="AutoMapper" Version="10.1.1" />
+      <PackageReference Include="Discord.Net.Core" Version="2.4.0" />
+      <PackageReference Include="Discord.Net.WebSocket" Version="2.4.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
       <PackageReference Include="Meziantou.Analyzer" Version="1.0.665">
         <PrivateAssets>all</PrivateAssets>
@@ -35,6 +38,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="System.Reactive" Version="5.0.0" />
+      <PackageReference Include="TimeZoneConverter" Version="3.5.0" />
     </ItemGroup>
 
     <ItemGroup>
