--- a/Modules/PierogiesBot.Discord/PierogiesBot.Discord.csproj
+++ b/Modules/PierogiesBot.Discord/PierogiesBot.Discord.csproj
@@ -56,6 +56,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Orleans\PierogiesBot.GrainsInterfaces\PierogiesBot.GrainsInterfaces.csproj" />
       <ProjectReference Include="..\PierogiesBot.Data\PierogiesBot.Data.csproj" />
     </ItemGroup>
 
