--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,12 +13,13 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ master ]
+    paths: 
+      - PierogiesBot/**
+      - Modules/**
+      - PierogiesBot.sln
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ master ]
-  schedule:
-    - cron: '36 3 * * 0'
 
 jobs:
   analyze:
